# serializer version: 1
# name: TestFermiNet.test_kinetic
  Array(0.2784566, dtype=float32)
# ---
# name: TestFermiNet.test_potential
  Array(-0.7828356, dtype=float32)
# ---
# name: TestFermiNet.test_walk
  Array([[[0.4166998, 0.2729937, 0.9946592],
          [-0.1636449, 0.5025202, -0.2179334],
          [0.5774042, 0.5321482, -0.83614],
          [-0.6533463, 0.2915913, 1.5937456],
          [0.479838, -0.0993455, -0.2716153],
          [-0.4078843, -2.4394894, 0.041675],
          [0.0554786, 0.2439971, -0.0937411],
          [0.2253472, 0.4246373, -0.7441298],
          [0.3037185, 1.1247488, -0.7110634],
          [0.0041618, -0.7565254, -1.5015912]]], dtype=float32)
# ---
# name: TestFermiNet.test_wf
  Array(0.1269548, dtype=float32)
# ---
# name: TestHydrogen.test_kinetic
  Array(1.0260653, dtype=float32)
# ---
# name: TestHydrogen.test_potential
  Array(-1.5260653, dtype=float32)
# ---
# name: TestHydrogen.test_walk
  Array([[[-0.0269817, -0.0194543, 0.308942],
          [0.4157366, -1.0177534, 0.7061033],
          [1.1319326, -1.5159024, -1.4163642],
          [-0.5633768, 0.0473477, 1.8883846],
          [0.062221, -0.3534039, -0.3654794]]], dtype=float32)
# ---
# name: TestHydrogen.test_wf
  Array(-0.65528, dtype=float32)
# ---
# name: TestDeepSolid.test_kinetic
  DeviceArray(0.73921335-0.j, dtype=complex64)
# ---
# name: TestDeepSolid.test_potential
  DeviceArray(-2.1559424, dtype=float32)
# ---
# name: TestDeepSolid.test_walk
  DeviceArray([[[ 2.2995605 ,  0.42593208,  0.27654204,  3.4519253 ,  1.6989225 ,  0.1703778 ],
                [ 2.4035108 , 99.063805  , 99.72556   ,  0.3563191 , 99.54929   , 99.8651    ],
                [ 1.7425002 ,  1.3832064 , 99.18426   ,  3.1609056 , 99.914474  ,  0.52654046],
                [ 1.1910352 , 99.932     , 99.03048   ,  3.0361352 , 98.8087    ,  0.84947747],
                [ 2.7835414 , 98.74707   ,  0.670912  ,  2.3160307 ,  0.9291579 ,  0.03203664],
                [ 2.1043825 , 98.84852   ,  1.2825438 ,  0.42136675, 99.75692   ,  0.06060147],
                [ 1.4776574 ,  0.3267837 ,  0.260595  ,  2.0732405 , 99.6132    ,  0.40311384],
                [ 2.4202895 ,  0.8260073 , 99.986984  ,  3.2489176 , 99.280174  ,  0.8491479 ],
                [ 2.999802  ,  0.10107677, 98.864075  ,  2.4360607 ,  0.06492138,  0.55907583],
                [ 0.05181932,  0.03363067, 99.75906   ,  0.74592364, 99.53868   , 99.66028   ]]],            dtype=float32)
# ---
# name: TestDeepSolid.test_wf
  DeviceArray(-2.0724864, dtype=float32)
# ---
